--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <section id="secciondatos">
       <h2>Datos personales</h2>
 
-      <span>Nombres:</span>
-      <span>Apellidos:</span>
+      <span>Nombres: Félix Omar </span><br>
+      <span>Apellidos: Palacios Macías</span>
 
-      <p>¡Hola! Soy ________, con experiencia en desarrollo web en front end y
+      <p>¡Hola! Soy Omar Palacios, con experiencia en desarrollo web en front end y
         back end. Participo en todas las etapas
         del ciclo de desarrollo de proyectos web dinámicos. Además, tengo
         sólidos conocimientos en gestión de proyectos
