Reglas CSS y Modelo de cajas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <!-- Nav: Fin -->
 
-    <section id="secciondatos">
+    <section id="secciondatos" class="seccion">
       <h2>Datos personales</h2>
 
       <span>Nombres: Félix Omar </span><br>
@@ -40,7 +40,7 @@
 
     </section>
 
-    <section id="seccionredes">
+    <section id="seccionredes" class="seccion">
       <h2>Redes sociales</h2>
 
       <span><a href="https://www.linkedin.com/">LinkedIn</a></span>
@@ -48,7 +48,7 @@
 
     </section>
 
-    <section id="seccionhabilidades">
+    <section id="seccionhabilidades" class="seccion">
       <h2>Formación Académica</h2>
       <h3>Formación de grado</h3>
       <ul>
@@ -103,7 +103,7 @@
       </ol>
     </section>
 
-    <aside id="secciongaleria">
+    <aside id="secciongaleria" class="seccion">
       <img src="public/images/reading.jpg" alt="Reading" width="30%">
       <img
         src="https://cdn.pixabay.com/photo/2015/05/29/19/18/cafe-789635_960_720.jpg"
@@ -111,7 +111,7 @@
 
     </aside>
 
-    <section id="seccioncontactenos">
+    <section id="seccioncontactenos" class="seccion">
 
       <h2>Contáctame</h2>
       <h3>Sus datos</h3>
