Reglas CSS y Modelo de cajas

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
     </section>
 
     <aside id="secciongaleria" class="seccion">
-      <img src="public/images/reading.jpg" alt="Reading" width="30%">
+      <img src="public/images/reading.jpg" alt="Reading" width="50%">
       <img
         src="https://cdn.pixabay.com/photo/2015/05/29/19/18/cafe-789635_960_720.jpg"
-        alt="Foto de colaboración" width="30%">
+        alt="Foto de colaboración" width="50%">
 
     </aside>
 
@@ -117,11 +117,10 @@
       <h3>Sus datos</h3>
 
       <form>
-        <label for="nombre">Nombres:</label><input type="text" name="nombre"
-          id="nombre">
-        <label for="nombre">Apellidos:</label><input type="text"
-          name="apellidos"
-          id="apellidos"><br>
+        <label for="nombre">Nombres:</label>
+        <input type="text" name="nombre" id="nombre">
+        <label for="apellidos">Apellidos:</label>
+        <input type="text" name="apellidos" id="apellidos"><br>
 
         <label for="edad">Seleccione su rango de edad</label><br>
         <input type="radio" id="opcion1" name="edad" value="menor25"><label
