Diseño de cuadrícula: Grid

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
     <section id="seccioncontactenos" class="seccion">
 
-      <h2>Contáctame</h2>
-      <h3>Sus datos</h3>
+      <h2 id="uno">Contáctame</h2>
+      <h3 id="dos">Sus datos</h3>
 
-      <form>
+      <form id="cuatro">
         <label for="nombre">Nombres:</label>
         <input type="text" name="nombre" id="nombre">
         <label for="apellidos">Apellidos:</label>
@@ -142,26 +142,24 @@
       </form>
 
 
-      <h3>Ubicación</h3>
+      <h3 id="tres">Ubicación</h3>
       <br>
-      <div>
+      <div id="cinco">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7973.60539608658!2d-79.901372!3d-2.2278035999999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x902d6e34b46c31e9%3A0x34b6c5cc3e3dafc6!2sGuangala%2C%20Guayaquil!5e0!3m2!1ses-419!2sec!4v1673707395600!5m2!1ses-419!2sec" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
       </div>
-      <footer>
-        <address>
-          Email: <a href="mailto:felixopm1997@gmail.com">
-          felixopm1997@gmail.com</a><br>
-          Tel: <a href="tel:+593984972239">
-          +593984972239</a><br><br>
-          Guangala<br>
-          Guayaquil<br>
-          Ecuador
-        </address>
-      </footer>
-      
-
     </section>
+    <footer>
+      <address>
+        Email: <a href="mailto:felixopm1997@gmail.com">
+        felixopm1997@gmail.com</a><br>
+        Tel: <a href="tel:+593984972239">
+        +593984972239</a><br><br>
+        Guangala<br>
+        Guayaquil<br>
+        Ecuador
+      </address>
+    </footer>
 
     
 
