--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Nav: Inicio -->
     <nav>
       <ul>
-        <li><a href="#secciondatos">Datos Personales</a></li>
-        <li><a href="#seccionredes">Redes Sociales</a></li>
-        <li><a href="#seccionhabilidades">Habilidades</a></li>
-        <li><a href="#secciongaleria">Galería</a></li>
-        <li><a href="#seccioncontactenos">Contáctenos</a></li>
+        <li id="liuno"><a href="#secciondatos">Datos Personales</a></li>
+        <li id="lidos"><a href="#seccionredes">Redes Sociales</a></li>
+        <li id="litres"><a href="#seccionhabilidades">Habilidades</a></li>
+        <li id="licuatro"><a href="#secciongaleria">Galería</a></li>
+        <li id="licinco"><a href="#seccioncontactenos">Contáctenos</a></li>
       </ul>
     </nav>
     <!-- Nav: Fin -->
@@ -117,28 +117,25 @@
       <h3 id="dos">Sus datos</h3>
 
       <form id="cuatro">
-        <label for="nombre">Nombres:</label>
-        <input type="text" name="nombre" id="nombre">
-        <label for="apellidos">Apellidos:</label>
-        <input type="text" name="apellidos" id="apellidos"><br>
-
-        <label for="edad">Seleccione su rango de edad</label><br>
-        <input type="radio" id="opcion1" name="edad" value="menor25"><label
-          for="opcion1"> menor a 25 años</label>
-        <input type="radio" id="opcion2" name="edad" value="entre26y20"><label
-          for="opcion2"> entre 26 y 30 años</label>
-        <input type="radio" id="opcion3" name="edad" value="mayor31"><label
-          for="opcion3"> mayor a 31 años</label><br><br>
-
-        <label for="tiposervicio">Seleccione el tipo de servicio a consultar</label><br>
-        <input type="checkbox" name="frontend" id="frontend"><label
-          for="frontend">Frontend Dev</label><br>
-        <input type="checkbox" name="backend" id="backend"><label for="backend">Backend
-          Dev</label><br>
-        <input type="checkbox" name="scrum" id="scrum"><label for="scrum">Desarrollo
-          de software</label><br>
-        <input type="checkbox" name="cicd" id="cicd"><label for="cicd">CI/CD</label><br>
-        <button type="submit">Enviar</button>
+        <div><label for="nombre">Nombres:</label>
+          <input type="text" name="nombre" id="nombre"></div>
+        <div><label for="apellidos">Apellidos:</label>
+          <input type="text" name="apellidos" id="apellidos"></div>
+        <br>
+        <div><label for="edad">Seleccione su rango de edad</label></div>
+        <div><input type="radio" id="opcion1" name="edad" value="menor25"><label
+          for="opcion1"> menor a 25 años</label></div>
+        <div><input type="radio" id="opcion2" name="edad" value="entre26y20"><label
+          for="opcion2"> entre 26 y 30 años</label></div>
+        <div><input type="radio" id="opcion3" name="edad" value="mayor31"><label
+          for="opcion3"> mayor a 31 años</label></div>
+        <br>
+        <div><label for="tiposervicio">Seleccione el tipo de servicio a consultar</label></div>
+        <div><input type="checkbox" name="frontend" id="frontend"><label for="frontend">Frontend Dev</label></div>
+        <div><input type="checkbox" name="backend" id="backend"><label for="backend">Backend Dev</label></div>
+        <div><input type="checkbox" name="scrum" id="scrum"><label for="scrum">Desarrollo de software</label></div>
+        <div><input type="checkbox" name="cicd" id="cicd"><label for="cicd">CI/CD</label></div>
+        <div><button type="submit">Enviar</button></div>
       </form>
 
 
@@ -151,15 +148,14 @@
     </section>
     <footer>
       <address>
-        Email: <a href="mailto:felixopm1997@gmail.com">
-        felixopm1997@gmail.com</a><br>
-        Tel: <a href="tel:+593984972239">
-        +593984972239</a><br><br>
-        Guangala<br>
-        Guayaquil<br>
-        Ecuador
+        <div>Email: <a href="mailto:felixopm1997@gmail.com">felixopm1997@gmail.com</a></div> 
+        <div>Tel: <a href="tel:+593984972239">+593984972239</a></div>
+        <div>Guangala</div>
+        <div>Guayaquil</div>
+        <div>Ecuador</div>
       </address>
     </footer>
+
 
     
 
