--- a/librosgratis/ror.html
+++ b/librosgratis/ror.html
@@ -7,6 +7,56 @@
 	<link rel="stylesheet" href="public/stylesheets/ror.css">
 </head>
 <body>
+	<main class="container-fluid" id="rorcont2">
+		<header id="rorcontenh">
+			<section id="rorhcont1" class="headersection">
+				<div id="rorimgheader"><img src="public/images/webdevelopment/black.jpg" alt="Foto Sitio 1" width="170"></div>
+			</section>
+			<section id="rorhcont2" class="headersection">
+				<h2>Ruby for Rails</h2>
+				<div id="textoheader"><p><span id="negritasheader">ISBN</span><span> 1932394699</span>
+				<br><br> 
+				<span>by</span><span id="negritasheader"> David A. Black</span>
+				<br><br>
+				<span>The word is out: with Ruby on Rails you can build
+					powerful Web applications easily and quickly! And just
+					like the Rails framework itself, Rails applications
+					are Ruby programs. That means you can t tap into the
+					full power of Rails unless you master the Ruby 
+					language.</span>
+				<br><br><span id="negritasheader">Categorías</span>
+				<br><br><a href="index.html">Web Development</a>
+				<br><br></p></div>
+				<span id="">Publicación: 2006-05-01</span>
+			</section>
+		</header>
+	</main>
+
+	<main class="container-fluid" id="rorcont1">
+		<nav>
+			<section id="area1">
+				<a href="index.html">Libros Gratis</a>
+				<h1>Web Development</h1>
+			</section>
+	
+		</nav>
+	</main>
+
+	<main class="container-fluid" id="rorcont3">
+		<aside>
+			<section id="contaside" class="v-line">
+				<div id="rorimgaside"><img src="public/images/webdevelopment/callen.jpg" alt="Foto Sitio 2" width="80"></div>
+				<div id="rorimgaside"><img src="public/images/webdevelopment/cooper.jpg" alt="Foto Sitio 3" width="80"></div>
+				<div id="rorimgaside"><img src="public/images/webdevelopment/crane2.jpg" alt="Foto Sitio 4" width="80"></div>
+				<div id="rorimgaside"><img src="public/images/webdevelopment/bibeault.jpg" alt="Foto Sitio 5" width="80" ></div> 
+			</section>			
+		</aside>
+	</main>
+
+
+
+
+
     
 </body>
 </html>
