--- a/librosgratis/index.html
+++ b/librosgratis/index.html
@@ -28,13 +28,13 @@
 
 	 <nav>
 		 <section id="contenedor2" class="cont2">
-			<div><a href="">Web Development</a></div>
-			<div><a href="">Microsoft</a></div>
-			<div><a href="">PowerBuilder</a></div>
-			<div><a href="">Java</a></div>
-			<div><a href="">Computer Graphics</a></div>
-			<div><a href="">Internet</a></div>
-			<div><a href="">Object-Oriented Programming</a></div>		
+			<div><a href="ror.html">Web Development</a></div>
+			<div><a href="ror.html">Microsoft</a></div>
+			<div><a href="ror.html">PowerBuilder</a></div>
+			<div><a href="ror.html">Java</a></div>
+			<div><a href="ror.html">Computer Graphics</a></div>
+			<div><a href="ror.html">Internet</a></div>
+			<div><a href="ror.html">Object-Oriented Programming</a></div>		
 		 </section>
 
 	 </nav>
