--- a/proyectopersonal/freebie.html
+++ b/proyectopersonal/freebie.html
@@ -28,6 +28,7 @@
     <title>Gaia - Bootstrap Template | Free Demo</title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <link href="assets/css/gaia.css" rel="stylesheet"/>
 
     <!--     Fonts and icons     -->
@@ -151,99 +152,92 @@
         </div>
     </div>
 
-<!-- Tabla1 -->
 
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="title-area">
-                    <h2>Estatus de las tolvas</h2>
-                    <p class="description">Visualiza las últimas 4 tolvas en haber sido rellenadas. La información es actualizada cada minuto.</p>
-                </div>
+<!-- Tabla 1 -->
+
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Estatus de las tolvas</h2>
+                <p class="description">Visualiza las últimas 4 tolvas en haber sido rellenadas. La información es actualizada cada minuto.</p>      
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="info-icon">
-                        <table>
-                            <tr>
-                                <th class="text-center">Estanque</th>
-                                <th class="text-center">Tolva</th>
-                                <th class="text-center">Veces rellenada</th>
-                            </tr>
-                            <tr>
-                                <td class="text-center">SL1A</td>
-                                <td class="text-center">4</td>
-                                <td class="text-center">7</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">SL39</td>
-                                <td class="text-center">8</td>
-                                <td class="text-center">25</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">SL4</td>
-                                <td class="text-center">3</td>
-                                <td class="text-center">16</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">SL9</td>
-                                <td class="text-center">5</td>
-                                <td class="text-center">27</td>
-                            </tr>
-                        </table>
-                        <!-- Tabla1 -->
-                    </div>
-                </div>
+            <div class="col-md-4">
+                <table>
+                    <tr>
+                        <th class="text-center">Estanque</th>
+                        <th class="text-center">Tolva</th>
+                        <th class="text-center">Veces rellenada</th>
+                    </tr>
+                    <tr>
+                        <td class="text-center">SL1A</td>
+                        <td class="text-center">4</td>
+                        <td class="text-center">7</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">SL39</td>
+                        <td class="text-center">8</td>
+                        <td class="text-center">25</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">SL4</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">16</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">SL9</td>
+                        <td class="text-center">5</td>
+                        <td class="text-center">27</td>
+                    </tr>
+                </table>
+  
             </div>
         </div>
     </div>
+</div>
 
 <!-- Tabla2 -->
-
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="title-area">
-                    <h2>Notificaciones recientes</h2>
-                    <p class="description">Visualiza las últimas 4 alertas del sistema. La información es actualizada cada minuto.</p>
-                </div>
+<div class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h2>Notificaciones recientes</h2>
+                <p class="description">Visualiza las últimas 4 alertas del sistema. La información es actualizada cada minuto.</p>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="info-icon">
-                        <table>
-                            <tr>
-                                <th class="text-center">Fecha y hora</th>
-                                <th class="text-center">Tipo</th>
-                                <th class="text-center">ID</th>
-                            </tr>
-                            <tr>
-                                <td class="text-center">28/1/2023 16:15</td>
-                                <td class="text-center">3</td>
-                                <td class="text-center">SL3_5</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">28/1/2023 16:14</td>
-                                <td class="text-center">3</td>
-                                <td class="text-center">SL3_5</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">28/1/2023 16:13</td>
-                                <td class="text-center">3</td>
-                                <td class="text-center">SL3_5</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">28/1/2023 16:12</td>
-                                <td class="text-center">3</td>
-                                <td class="text-center">SL3_5</td>
-                            </tr>
-                        </table>
-                        <!-- Tabla2 -->
-                    </div>
-                </div>
+            <div class="col-md-4">
+                <table>
+                    <tr>
+                        <th class="text-center">Fecha y hora</th>
+                        <th class="text-center">Tipo</th>
+                        <th class="text-center">ID</th>
+                    </tr>
+                    <tr>
+                        <td class="text-center">28/1/2023 16:15</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">SL3_5</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">28/1/2023 16:14</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">SL3_5</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">28/1/2023 16:13</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">SL3_5</td>
+                    </tr>
+                    <tr>
+                        <td class="text-center">28/1/2023 16:12</td>
+                        <td class="text-center">3</td>
+                        <td class="text-center">SL3_5</td>
+                    </tr>
+                </table>
+  
             </div>
         </div>
     </div>
+</div>
+
 
 
 
@@ -436,79 +430,6 @@
                                 </li>
                                 <li>
                                     <a href="#">About Us</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-md-3 col-md-offset-1 col-sm-3">
-                    <div class="info">
-                        <h5 class="title"> Help and Support</h5>
-                         <nav>
-                            <ul>
-                                <li>
-                                    <a href="#">Contact Us</a>
-                                </li>
-                                <li>
-                                    <a href="#">How it works</a>
-                                </li>
-                                <li>
-                                    <a href="#">Terms &amp; Conditions</a>
-                                </li>
-                                <li>
-                                    <a href="#">Company Policy</a>
-                                </li>
-                                <li>
-                                    <a href="#">Money Back</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-3">
-                    <div class="info">
-                        <h5 class="title">Latest News</h5>
-                        <nav>
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-twitter"></i> <b>Get Shit Done</b> The best kit in the market is here, just give it a try and let us...
-                                        <hr class="hr-small">
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-twitter"></i> We've just been featured on <b> Awwwards Website</b>! Thank you everybody for...
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-md-2 col-md-offset-1 col-sm-3">
-                    <div class="info">
-                        <h5 class="title">Follow us on</h5>
-                        <nav>
-                            <ul>
-                                <li>
-                                    <a href="#" class="btn btn-social btn-facebook btn-simple">
-                                        <i class="fa fa-facebook-square"></i> Facebook
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="btn btn-social btn-dribbble btn-simple">
-                                        <i class="fa fa-dribbble"></i> Dribbble
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="btn btn-social btn-twitter btn-simple">
-                                        <i class="fa fa-twitter"></i> Twitter
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="btn btn-social btn-reddit btn-simple">
-                                        <i class="fa fa-google-plus-square"></i> Google+
-                                    </a>
                                 </li>
                             </ul>
                         </nav>
